k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/software-containerization-backend-db: "true"
        component: api
    spec:
      containers:
        - env:
          - name: DB_HOST_NAME
            valueFrom:
              configMapKeyRef:
                name: db-configmap
                key: db_host
          - name: DB_NAME
            valueFrom:
              configMapKeyRef:
                name: db-configmap
                key: db_name
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                name: db-secrets
                key: password
          - name: DB_USER
            valueFrom:
              secretKeyRef:
                name: db-secrets
                key: username

          image: ghcr.io/noleu/event_calendar_api
          name: api
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: 
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 2
              memory: 1024Mi
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  selector:
    component: api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
