k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: event-frontend
          image: https://ghcr.io/noleu/event_calendar_frontend
          ports:
            - containerPort: 80
          resources: 
            requests:
              cpu: 1
              memory: 256Mi
            limits:
              cpu: 2
              memory: 768Mi
            
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
